Just added some comments on the previous commit.